# BowlingGame

./: .gitignore  BowlingGame.cpp  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/BowlingCore/: BowlingGame.h
include/Game/Bowling/Core/: FinalFrame.h  Frame.h  FrameFactory.h  Player.h
include/Game/Bowling/Engine/: BowlingGame.h  GameState.h
include/Game/Bowling/Exceptions/: BowlingException.h  GameOverException.h  InvalidRollException.h  ScoringRuleException.h  TooManyRollsException.h
include/Game/Bowling/Presentation/: ScoreBoardPresenter.h  ScoreBoardSnapshot.h
include/Game/Bowling/Scoring/: PlayerScore.h  ScoringEngine.h  StandardBowlingScoring.h
include/Game/Controllers/: BowlingGameController.h  IGameController.h
include/Game/Modes/: IGameMode.h  SinglePlayerGame.h
src/BowlingCore/: BowlingGame.cpp
src/Game/Bowling/Core/: FinalFrame.cpp  Frame.cpp  FrameFactory.cpp  Player.cpp
src/Game/Bowling/Engine/: BowlingGame.cpp  GameState.cpp
src/Game/Bowling/Scoring/: PlayerScore.cpp  StandardBowlingScoring.cpp
src/Game/Controllers/: BowlingGameController.cpp
src/Game/Modes/: SinglePlayerGame.cpp
src/Game/Presentation/: ScoreBoardPresenter.cpp
tests/: CMakeLists.txt
tests/Game/Bowling/Controller/: TestBowlingGameController.cpp
tests/Game/Bowling/Core/: TestFinalFrame.cpp  TestFrame.cpp  TestPlayerScore.cpp
tests/Game/Bowling/Engine/: TestGameState.cpp
tests/Game/Bowling/Presentation/: TestScoreBoardSnapshot.cpp
tests/Game/Bowling/Scoring/: TestStandardBowlingScoring.cpp
